# ffmpeg2obj

./: .envrc.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: tox.yml
ffmpeg2obj/: helper.py  script.py
src/ffmpeg2obj/: helper.py  script.py
