[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "ffmpeg2obj"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "boto3==1.34.92",
  "ffmpeg-python@ git+https://github.com/kkroening/ffmpeg-python.git",
]
[project.optional-dependencies]
dev = [
  "black==24.4.2",
  "flake8==7",
  "isort==5.13.2",
  "mypy==1.10",
  "pre-commit==3.7",
  "pyproject-fmt==1.8",
  "tox==4.14.2",
  "types-boto3==1.0.2",
]
[project.urls]
"Github" = "https://github.com/KBTMPL/ffmpeg2obj"
[project.scripts]
ffmpeg2obj = "ffmpeg2obj.script:main"

[tool.isort]
profile = "black"

[tool.mypy]
files = [
  "src/ffmpeg2obj",
]
